src/styles/styles.less
@import './layout';

@import './components/ui/headings';
@import './components/ui/forms';

@import './components/map';
@import './components/header';
@import './components/gallery';
@import './components/location-item-edit-view';
@import './components/location-item-full-view';
@import './components/location-item-submission-view';

html,
body {
    overflow-y: hidden;
    height: 100vh;
    height: -webkit-fill-available;
    max-width: 100%;
    font-size: @font-size-base;
    line-height: @font-size-base-line-height;
    margin: 0;
    background: #fefefe;
    font-family: @font-family-primary;

    * {
        box-sizing: border-box;
    }
}

